--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,6 +25,7 @@
       <div ion-item ><b>Sexo:</b> {{data.sexo}}</div>
       <div ion-item ><b>Edad:</b> {{data.edad}}</div>
       <div ion-item ><b>Curp:</b> {{data.crup}}</div>
+      <div ion-item ><b>Estado:</b> {{data.estado}}</div>
     </ion-list>
 
     <button ion-button icon-left block (click)="recognizeText()" color="light">
